<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/comm_margin"
        android:layout_marginEnd="@dimen/comm_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_bill_child_type_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawableDimen"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/comm_min_margin"
            android:layout_weight="1"
            android:background="@drawable/ll_customer_selector"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bill_child_type_title"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/comm_textSize_middle"/>

            <EditText
                android:id="@+id/et_bill_child_type_new"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:maxLength="30"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:gravity="end|center_vertical"
                android:hint="@string/bill_child_type_new_hint"
                android:textSize="@dimen/comm_textSize_middle"
                android:background="@null"/>
             
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawableDimen"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/comm_min_margin"
            android:layout_marginEnd="@dimen/comm_min_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_bill_child_type_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:gravity="center"
                android:text="@string/but_cancle"
                android:textColor="@color/colorIcons"/>

            <View
                android:layout_width="@dimen/comm_min_margin"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@null"/>

            <TextView
                android:id="@+id/tv_bill_child_type_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/but_done"
                android:textColor="@color/colorIcons"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>